Test 2.1.6 (support -> quickSortArray)

--- a/test/index.html
+++ b/test/index.html
@@ -5,7 +5,7 @@
         <title>Test Yengin</title>
     </head>
     <body>
-        <script type="text/javascript" src="../yengin.min.js"></script>
+        <script type="text/javascript" src="../source/yengin-2.1.6.js"></script>
         <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
