--- a/test/index.html
+++ b/test/index.html
@@ -5,6 +5,12 @@
         <title>Test Yengin</title>
     </head>
     <body>
+        <script type="text/javascript">
+            window.onerror = function (msg, url, lineNo, columnNo, error) {
+                var error_report = 'From '+url+' on line '+lineNo+' (column '+columnNo+'), '+error;
+                console.warn(error_report);
+            };
+        </script>
         <script type="text/javascript" src="../source/yengin-2.1.6.js"></script>
         <script type="text/javascript" src="main.js"></script>
     </body>
